[gd_scene load_steps=20 format=3 uid="uid://lt8c5mqot8ul"]

[ext_resource type="Texture2D" uid="uid://besyj82uwm0p8" path="res://assets/spr_flank_ship.png" id="1_c61x5"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="1_ce4hv"]
[ext_resource type="Script" path="res://scenes/player/player_flank.gd" id="1_dmpxw"]
[ext_resource type="PackedScene" uid="uid://0x52vg1d6dtb" path="res://projectiles/player_projectile_small.tscn" id="2_xui4r"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_6f1x4"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="4_b6v2r"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="5_ggttu"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="6_pjykb"]
[ext_resource type="PackedScene" uid="uid://cm375hqr0kc7t" path="res://effects/explosion_effect.tscn" id="7_tsld8"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="8_sxelt"]
[ext_resource type="AudioStream" uid="uid://brofr43frbllx" path="res://sfx/shoot_sound_1.wav" id="9_hl7w2"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="10_s1my3"]
[ext_resource type="Script" path="res://components/lerp_component.gd" id="11_xiauc"]
[ext_resource type="AudioStream" uid="uid://b8sdh013lyo0k" path="res://sfx/flank_pickup_1.wav" id="14_y6ghq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_30jot"]
atlas = ExtResource("1_c61x5")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rikks"]
atlas = ExtResource("1_c61x5")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_frjtg"]
atlas = ExtResource("1_c61x5")
region = Rect2(16, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkcaq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30jot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rikks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frjtg")
}],
"loop": true,
"name": &"center",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf6ak"]
size = Vector2(3, 4)

[node name="PlayerFlank" type="Node2D"]
script = ExtResource("1_dmpxw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kkcaq")
animation = &"center"
autoplay = "center"

[node name="ProjectileSpawner" type="Node2D" parent="."]
script = ExtResource("1_ce4hv")
scene = ExtResource("2_xui4r")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_6f1x4")
sprite = NodePath("..")
scale_amount = Vector2(1.25, 1.25)
scale_duration = 0.25

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("4_b6v2r")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("5_ggttu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_kf6ak")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("6_pjykb")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("1_ce4hv")
scene = ExtResource("7_tsld8")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "spawner_component")]
script = ExtResource("8_sxelt")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
spawner_component = NodePath("../ExplosionSpawnerComponent")

[node name="ShootAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hl7w2")
volume_db = -8.0
pitch_scale = 0.75
bus = &"SFX"
script = ExtResource("10_s1my3")
pitch_max = 1.0

[node name="LerpComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("11_xiauc")
lerp_amount = 25.0
actor = NodePath("..")
lerp_y = true

[node name="PickupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_y6ghq")
script = ExtResource("10_s1my3")
